syntax = "proto3";
package com.css533.curbthecoins;
option java_multiple_files = true;

message UserProto{
  int64 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
  string invite_code = 6;
  int64 partner_id = 7;
  bool  hasError = 8;
  string error = 9;
}


service UserProtoService{
  rpc RegisterUserProto(UserProto) returns (UserProto){}
  //login
  rpc LoginUserProto(UserProto) returns (UserProto){}
}